# Max

./: .gitignore  Kill-Max.cmd  Max.cmd  Max.command  Maxclean.bundle  Maxrepo.bundle  README.md  ROADMAP.md  selfdiagnosefixes.md
engine/: .env.example  .gitignore  .oracle_model.meta.json  README.md  lan-cert.pem  lan-key.pem  pyproject.toml
engine/max_engine/: __init__.py  cli.py  complete.py  config.py  main.py  mcp_server.py  postprocess.py  prompts.py  router.py
engine/max_engine/aegis/: __init__.py  capture.py  deps.py  osv.py  redact.py  repair.py  scan_service.py  scanner.py  service.py  store.py
engine/max_engine/analytics/: __init__.py  store.py
engine/max_engine/apollo/: __init__.py  embed.py  predictions.py  service.py  store.py
engine/max_engine/capabilities/: __init__.py  interface.py  registry.py  router.py
engine/max_engine/code/: __init__.py  file_manager.py  planner.py
engine/max_engine/darknet/: __init__.py  client.py  fetcher.py  models.py  service.py
engine/max_engine/delegate/: __init__.py  coordinator.py  engine.py  scheduler.py  session.py
engine/max_engine/dsl/: __init__.py  parser.py
engine/max_engine/market/: __init__.py  finnhub.py  models.py  service.py  stream.py  yahoo.py
engine/max_engine/mcp/: __init__.py  client.py  facade.py  manager.py
engine/max_engine/models/: __init__.py  benchmark.py  catalog.py  store.py
engine/max_engine/oracle/: __init__.py  calibrator.py  enrichment.py  extract.py  grading.py  hindsight.py  judge.py  objective.py  service.py  store.py
engine/max_engine/osint/: __init__.py  events.py  gazetteer.py  gdelt.py  gnews.py  models.py  naval.py  rss.py  score.py  service.py  severity.py  sources.py
engine/tests/: test_aegis_deps_osv.py  test_aegis_redact.py  test_aegis_repair.py  test_aegis_scan_store.py  test_aegis_scanner.py  test_aegis_store.py  test_anthropic.py  test_apollo.py  test_apollo_memory.py  test_capabilities_router.py  test_chat_api.py  test_claude_agent.py  test_complete.py  test_config_api.py  test_coordinator.py  test_cors.py  test_darknet.py  test_delegate.py  test_market.py  test_mcp.py  test_naval.py  test_ollama.py  test_openai_compat.py  test_oracle_calibrator.py  test_oracle_extract.py  test_oracle_grade.py  test_oracle_service.py  test_oracle_store.py  test_osint.py  test_parser.py  test_phase7.py  test_polymarket.py  test_postprocess.py  test_rag_api.py  test_rag_chunker.py  test_rag_memory.py  test_rag_service.py  test_router.py  test_session_stream.py  test_sessions_api.py  (+5 more)
(+184 files in other folders)
