[project]
name = "max-engine"
version = "1.0.0"
description = "Max — local-first AI engine (provider routing, DSL, delegate system)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "websockets>=12.0",
    "python-dotenv>=1.0",
    "sqlite-vec>=0.1.6",
    "faster-whisper>=1.0",
    "socksio>=0.9",
    "stem>=1.8",
    "beautifulsoup4>=4.12",
]

[project.scripts]
# Terminal client for the engine (talks over HTTP; works local or remote).
max = "max_engine.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["max_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
